// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/access-stats/AccessStats should render access stats header properly when total events are more than max events 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    previewCount={10000}
    previewStatButtonProps={{}}
    viewStatButtonProps={{}}
  />
</div>
`;

exports[`features/access-stats/AccessStats should render access stats list with extra props 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    previewCount={0}
    previewStatButtonProps={
      {
        "resin": 1,
      }
    }
    viewStatButtonProps={{}}
  />
</div>
`;

exports[`features/access-stats/AccessStats should render access stats properly when there are no events 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    previewCount={0}
    previewStatButtonProps={{}}
    viewStatButtonProps={{}}
  />
</div>
`;

exports[`features/access-stats/AccessStats should render access stats properly with error message 1`] = `
<div
  className="access-stats"
>
  <p>
    errorMessage
  </p>
</div>
`;

exports[`features/access-stats/AccessStats should render access stats properly with open access stats modal handler 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    openAccessStatsModal={[Function]}
    previewCount={1}
    previewStatButtonProps={{}}
    viewStatButtonProps={{}}
  />
  <PlainButton
    className="lnk access-stats-view-details"
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="View Details"
      id="boxui.accessStats.accessStatsViewDetails"
    />
  </PlainButton>
</div>
`;

exports[`features/access-stats/AccessStats should render access stats properly without error message 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    previewCount={1}
    previewStatButtonProps={{}}
    viewStatButtonProps={{}}
  />
</div>
`;

exports[`features/access-stats/AccessStats should render view more button with extra props 1`] = `
<div
  className="access-stats"
>
  <AccessStatsItemsList
    commentCount={0}
    commentStatButtonProps={{}}
    downloadCount={0}
    downloadStatButtonProps={{}}
    editCount={0}
    editStatButtonProps={{}}
    hasCountOverflowed={false}
    isBoxNote={false}
    openAccessStatsModal={[Function]}
    previewCount={0}
    previewStatButtonProps={{}}
    viewStatButtonProps={{}}
  />
  <PlainButton
    className="lnk access-stats-view-details"
    hi={1}
    onClick={[Function]}
  >
    <FormattedMessage
      defaultMessage="View Details"
      id="boxui.accessStats.accessStatsViewDetails"
    />
  </PlainButton>
</div>
`;
